# api/docs/swagger.yaml
@@ -85,6 +85,9 @@ definitions:
         type: number
       created_at:
         type: string
+      currency_id:
+        example: 1
+        type: integer
       from_user_id:
         example: 1
         type: integer
@@ -468,9 +471,7 @@ paths:
         "200":
           description: OK
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/models.TransactionResponse'
         "400":
           description: Bad Request
           schema:
